--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
                                 <div class="row">
                                     <div class="col-sm-6 col-md-5">
                                         <div class="about-img">
-                                            <img src="img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                                            <img src="img/#testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
                                         </div>
                                     </div>
                                     <div class="col-sm-6 col-md-7">
                                         <div class="about-info">
-                                            <p><span class="title-s">Name: </span> <span>Jatinder the Developer</span></p>
-                                            <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
+                                            <p><span class="title-s">Name: </span> <span>Jatinder Kumar</span></p>
+                                            <p><span class="title-s">Profile: </span> <span>Full stack developer</span></p>
                                             <p><span class="title-s">Email: </span> <span>email.jatinderkumar@gmail.com</span></p>
                                             <p><span class="title-s">Phone: </span> <span>(91) 988-851-1400</span></p>
                                         </div>
