--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="container">
                     <!--<p class="display-6 color-d">Hello, world!</p>-->
                     <h1 class="intro-title mb-4"> Jatinder Kumar </h1>
-                    <p class="intro-subtitle"><span class="text-slider-items">Developer,Web Developer,Web Designer,Frontend Developer,Graphic Designer</span><strong class="text-slider"></strong></p>
+                    <p class="intro-subtitle"><span class="text-slider-items">Web Developer,Web Designer,Frontend Developer,Graphic Designer</span><strong class="text-slider"></strong></p>
                     <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
                 </div>
             </div>
@@ -140,16 +140,18 @@
                                         </h5>
                                     </div>
                                     <p class="lead">
-                                        Computer Professional offering over fourteen years of experience in the teaching, personality development, analysis and quality control of computer professionals.
+                                        Computer Professional offering over fifteen years of experience in Tech-savvy Full Stack Web Developer proficient in fundamental front-end languages and server-side languages. 
                                     </p>
                                     <p class="lead">
-                                        Adept in training, guiding and contributing to the resolution of flaws and impediments in the development of computer graduates.
+                                      Developed efficient and maintainable software according to business objectives and needs of clients. Used Java script, SQL and HTML to develop app- solutions.
+                                    Designed testing protocols to locate issues within system.
                                     </p>
                                     <p class="lead">
-                                        Talent for employing unique teaching strategies to effectively engage all students and fascinating learning environment.
+                                       Skillful creating servers and databases for functionality and designing and developing web portal. Hardworking collaborator with track record of superior results.
+                                      Provided software application engineering and maintenance for development lifecycle.
                                     </p>
                                     <p class="lead">
-                                        Quickly develops an excellent rapport with students, staff members to produce a friendly and supportive community.
+                                       Converted design assets into component-based HTML, CSS and JavaScript. Provided software application engineering and maintenance for development lifecycle.
                                     </p>
                                 </div>
                             </div>
