--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                         </h5>
                                     </div>
                                     <p class="lead">
-                                        Computer Professional offering over fifteen years of experience in Tech-savvy Full Stack Web Developer proficient in fundamental front-end languages and server-side languages. 
+                                        Computer Professional offering over fifteen years of experience in Tech-savvy, Full Stack Web Developer and technical trainer/Lecturer. Proficient in fundamental front-end languages and server-side languages. 
                                     </p>
                                     <p class="lead">
                                       Developed efficient and maintainable software according to business objectives and needs of clients. Used Java script, SQL and HTML to develop app- solutions.
